didn't test sizing, goat was cropped out but fixed now

--- a/main.css
+++ b/main.css
@@ -248,7 +248,7 @@ body{
 
 .paper-body{
   padding:16px 18px;
-  font-size:16px;
+  font-size: 14px;
   flex:1;
 }
 
